--- a/AuthService/appsettings.json
+++ b/AuthService/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "server=127.0.0.1;port=3306;user=nuwan;password=1qaz@WSX;database=authtest;"
+        "DefaultConnection": "server=127.0.0.1;port=3306;user=xxxxx;password=xxxxx;database=authtest;"
     },
     "Logging": {
         "LogLevel": {
@@ -11,7 +11,7 @@
     },
     "AllowedHosts": "*",
     "Jwt": {
-        "Key": "ThisismySecretKey",
-        "Issuer": "Test.com"
+        "Key": "xxxxx",
+        "Issuer": "xxxxx"
     }
 }
